# QtCourseProject

./: CMakeLists.txt  Struct.h  congestion_airport.cpp  congestion_airport.h  congestion_airport.ui  database.cpp  database.h  graphic.cpp  graphic.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  Протокол проверок.docx
